Fix post format on IE11

--- a/wp-content/themes/aerospace/sass/pages/_posts.scss
+++ b/wp-content/themes/aerospace/sass/pages/_posts.scss
@@ -103,6 +103,10 @@
         max-width: fit-content;
         margin-right: 1rem;
 
+        @include breakpoint("medium") {
+            flex: none;
+        }
+
         .post-format {
             padding: 0.2rem 1.5rem 0;
             color: $white;
